# OW_wasm_executor

./: .gitignore  Cargo.toml  README.md  simple_action_client.py  test_client.py  wasmtime_precompile.sh
action-builder/: Cargo.toml  Cargo_template.toml
action-builder-component/: Cargo.toml
action-builder-component/src/: lib.rs  lib_template.rs
action-builder-component/wit/: worlds.wit
action-builder/src/: lib.rs
actions/: batch_torch.rs  compile.sh  compile_component.sh  model_parts.rs  pytorch.rs  pytorch_component.rs  pytorch_example.rs
bench/: bench.py
crates/wasi-nn/: Cargo.toml
ow-common/: Cargo.toml
ow-executor/: Cargo.toml
ow-executor/src/: core.rs  runtime_tests.rs
ow-wasm-action/: Cargo.toml
ow-wasm-action/examples/: add.rs
ow-wasmtime/: Cargo.toml
ow-wasmtime-args/: Cargo.toml
ow-wasmtime-args/src/: wasmtime.rs
ow-wasmtime-component/: Cargo.toml
ow-wasmtime-component-nn/: Cargo.toml
ow-wasmtime-component-nn/src/: wasmtime.rs
ow-wasmtime-component/src/: wasmtime.rs
ow-wasmtime-memory/: Cargo.toml
ow-wasmtime-memory/src/: wasmtime.rs
ow-wasmtime-nn/: Cargo.toml
ow-wasmtime-nn-parallel/: Cargo.toml
ow-wasmtime-nn-parallel/src/: wasmtime.rs
ow-wasmtime-nn/src/: wasmtime.rs
ow-wasmtime-precompiler/: Cargo.toml
ow-wasmtime-precompiler/src/: lib.rs
ow-wasmtime-stdio/: Cargo.toml
ow-wasmtime-stdio/src/: wasmtime.rs
ow-wasmtime/src/: wasmtime.rs
tests/: parallel_action_client.py  simple_action_client.py
tests/wasi-nn/: batch_torch.py  model_parts.py  model_parts_parallel.py  pytorch_component_example.py  pytorch_example.py
tests/wasi-nn/imagenet/: download_image_list.py  downloader.py  flicker_images.json  flicker_urls.txt  generate_image_list.py
tests/wasi-nn/s3/: generate_uris.py  generate_urls.py
