[workspace]
members = [
    "ow-common",
    "ow-executor",
    "ow-wasmtime-args",
    "ow-wasmtime-stdio",
    "ow-wasmtime-memory",
    "ow-wasmtime-component",
    "action-builder",
    "action-builder-component"
]

[profile.release]
lto = true


[workspace.package]
version = "1.0.0"
authors = ["Julen Bohoyo <julen.bohoyo@urv.cat>"]
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
anyhow = "1.0.83"
base64 = "0.13.1"
zip = "0.5.13"
dashmap = "5.5.3"
timedmap = "1.0.2"
fasthash = "0.4.0"

wasmtime = "25.0.2"
wasi-common = "25.0.2"
wasmtime-wasi = "25.0.2"
ow-common = { path = "./ow-common" }
