[workspace]
members = [
    "ow-common",
    "ow-executor",
    "ow-wasmtime-args",
    "ow-wasmtime-stdio",
    "ow-wasmtime-memory",
    "ow-wasmtime-component",
    "action-builder",
    "action-builder-component"
]

[profile.release]
lto = true


[workspace.package]
version = "1.0.0"
authors = ["Julen Bohoyo <julen.bohoyo@urv.cat>"]
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
anyhow = "1.0.83"
base64 = "0.13.1"
zip = "0.5.13"
dashmap = "5.5.3"
timedmap = "1.0.2"
fasthash = "0.4.0"

wasmtime = "26.0.1"
wasi-common = "26.0.1"
wasmtime-wasi = "26.0.1"
ow-common = { path = "./ow-common" }



[workspace.lints.rust]
# Turn on some lints which are otherwise allow-by-default in rustc.
unused_extern_crates = 'warn'
trivial_numeric_casts = 'warn'
unstable_features = 'warn'
unused_import_braces = 'warn'
unused-lifetimes = 'warn'
unused-macro-rules = 'warn'

# Don't warn about unknown cfg condition in `#[cfg(pulley_tail_calls)]`
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(pulley_tail_calls)'] }
