[workspace]
resolver = "2"
members = [
    "ow-common",
    "ow-executor",
    "ow-wasmtime",
    "ow-wasmtime-nn",
    "ow-wasmtime-nn-parallel",
    "ow-wasmtime-component",
    "ow-wasmtime-component-nn",
    "action-builder",
    "action-builder-component",
]

[profile.release]
lto = true


[workspace.package]
version = "1.0.0"
authors = ["Julen Bohoyo <julen.bohoyo@urv.cat>"]
edition = "2021"

[workspace.dependencies]
wasmtime = "27.0.0"
wasi-common = "27.0.0"
wasmtime-wasi = "27.0.0"
ow-common = { path = "./ow-common" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
anyhow = "1.0.83"
base64 = "0.13.1"
zip = "0.5.13"
dashmap = "5.5.3"
timedmap = "1.0.2"
fasthash = "0.4.0"
rayon = "1.10.0"
aws-sdk-s3 = "1.62.0"
aws-config = "1.5.10"
tokio = "1.41.1"

#wasmtime-wasi-nn = { path = "./crates/wasi-nn", features = ["pytorch"]  }
wasmtime-wasi-nn = { version = "27.0.0", features = ["pytorch"]  }
thiserror = "1.0.43"
tracing = "0.1.26"
wiggle = "26.0.1"
cap-std = "3.4.1"
libtest-mimic = "0.7.0"
test-programs-artifacts = { path = 'crates/test-programs/artifacts' }
tracing-subscriber = { version = "0.3.1", default-features = false, features = ['fmt', 'env-filter', 'ansi', 'tracing-log'] }
walkdir = "2.3.3"
heck = "0.5"
wit-component = "0.219.1"
reqwest = { version = "0.11", features = ["blocking"] }



[workspace.lints.rust]
# Turn on some lints which are otherwise allow-by-default in rustc.
unused_extern_crates = 'warn'
trivial_numeric_casts = 'warn'
unstable_features = 'warn'
unused_import_braces = 'warn'
unused-lifetimes = 'warn'
unused-macro-rules = 'warn'

# Don't warn about unknown cfg condition in `#[cfg(pulley_tail_calls)]`
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(pulley_tail_calls)'] }
