[package]
name = "action-builder-component"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
base64.workspace = true
bytemuck = "1.20.0"
image = "0.25.5"
serde_json = "1.0.117"
wit-bindgen = { version = "0.36.0",  default-features = false, features = ["macros"] }
wit-bindgen-rt = { version = "0.36.0", features = ["bitflags"] }

[lib]
name = "action_component"
crate-type = ["cdylib"]

[package.metadata.component.dependencies]



[features]
default = []
component = []
component_nn = []


