[package]
name = "ow-executor"
version = "0.1.0"
authors = ["PhilippGackstatter <philipp.gackstatter@student.tuwien.ac.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "executor"
path = "src/bin/executor.rs"

[dependencies]
async-std = { version = "1.12.0", features = ["unstable", "attributes"] }
tide = "0.15.1"
tracing = "0.1"
tide-tracing = "0.0.7"
async-trait = "0.1.80"
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing-subscriber = "0.2"

ow-common = { path = "../ow-common" }
ow-wasmtime-args = { path = "../ow-wasmtime-args", optional = true  }
ow-wasmtime-stdio = { path = "../ow-wasmtime-stdio", optional = true  }
ow-wasmtime-memory = { path = "../ow-wasmtime-memory", optional = true  }
ow-wasmtime-component = { path = "../ow-wasmtime-component", optional = true  }

[features]
wasmtime_args = ["ow-wasmtime-args"]
wasmtime_stdio = ["ow-wasmtime-stdio"]
wasmtime_memory = ["ow-wasmtime-memory"]
wasmtime_component = ["ow-wasmtime-component"]
