[package]
name = "ow-executor"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "executor"
path = "src/bin/executor.rs"

[dependencies]
async-std = { version = "1.12.0", features = ["unstable", "attributes"] }
tide = "0.15.1"
tracing = "0.1"
tracing-subscriber = "0.2"
tide-tracing = "0.0.7"
async-trait = "0.1.80"
serde_json = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }

ow-common = { path = "../ow-common" }
ow-wasmtime = { path = "../ow-wasmtime", optional = true  }
ow-wasmtime-component = { path = "../ow-wasmtime-component", optional = true  }
ow-wasmtime-nn = { path = "../ow-wasmtime-nn", optional = true  }

[features]
default = ["wasmtime"]
wasmtime = ["ow-wasmtime"]
wasmtime_component = ["ow-wasmtime-component"]
wasmtime_nn = ["ow-wasmtime-nn"]