[package]
name = "ow-wasmtime-args"
version = "0.1.0"
authors = ["PhilippGackstatter <philipp.gackstatter@student.tuwien.ac.at>"]
edition = "2018"

[dependencies]
wasi-common = "21.0.1"
wasmtime = "21.0.1"

ow-common = { path = "../ow-common" }
dashmap = "5.5.3"
timedmap = "1.0.2"
anyhow = "1.0.83"
serde_json = "1.0.117"

serde = { version = "1.0", features = ["derive"] }
fasthash = "0.4.0"
