[package]
name = "ow-wasmtime-component"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
dashmap = { workspace = true }
timedmap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
fasthash = { workspace = true }

wasmtime = { workspace = true }
wasi-common = { workspace = true }
wasmtime-wasi = { workspace = true }
ow-common = { workspace = true }