[package]
name = "ow-wasmtime-nn"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
dashmap = { workspace = true }
timedmap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
fasthash = { workspace = true }

wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-nn = { workspace = true, optional = true }
ow-common = { workspace = true }

reqwest = { version = "0.11", features = ["blocking"] }
base64 = "0.13"


[features]
default = ["wasmtime-wasi-nn"]