[package]
name = "ow-wasmtime-precompiler"
version = "0.1.0"
authors = ["PhilippGackstatter <philipp.gackstatter@student.tuwien.ac.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "20.0.2"
anyhow = "1.0"
clap = "2.34"
base64 = "0.13.1"
zip = "0.5.13"
