[package]
name = "ow-wasmtime"
version = "0.1.0"
authors = ["PhilippGackstatter <philipp.gackstatter@student.tuwien.ac.at>"]
edition = "2018"

[dependencies]
wasi-common = "20.0.2"
wasmtime = "20.0.2"
wasmtime-wasi = "20.0.2"


ow-common = { path = "../ow-common" }
dashmap = "5.5.3"
anyhow = "1.0.83"
serde_json = "1.0.117"

serde = { version = "1.0", features = ["derive"] }
fasthash = "0.4.0"
